JumpScript/tests/baselines/reference/es6ImportDefaultBindingNoDefaultProperty.errors.txt
tests/cases/compiler/es6ImportDefaultBindingNoDefaultProperty_1.jump(1,8): error TS1192: Module '"tests/cases/compiler/es6ImportDefaultBindingNoDefaultProperty_0"' has no default export.


==== tests/cases/compiler/es6ImportDefaultBindingNoDefaultProperty_0.jump (0 errors) ====
    export var a = 10;
    
==== tests/cases/compiler/es6ImportDefaultBindingNoDefaultProperty_1.jump (1 errors) ====
    import defaultBinding from "./es6ImportDefaultBindingNoDefaultProperty_0";
           ~~~~~~~~~~~~~~
!!! error TS1192: Module '"tests/cases/compiler/es6ImportDefaultBindingNoDefaultProperty_0"' has no default export.
    